--- a/_config/aerospace/aerospace.toml
+++ b/_config/aerospace/aerospace.toml
@@ -11,6 +11,7 @@ after-login-command = []
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = []
 
+
 # Start AeroSpace at login
 start-at-login = false
 
@@ -57,12 +58,12 @@ preset = 'qwerty'
 #                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-inner.horizontal = 0
-inner.vertical =   0
-outer.left =       0
-outer.bottom =     0
-outer.top =        0
-outer.right =      0
+inner.horizontal = 10
+inner.vertical =   10
+outer.left =       10
+outer.bottom =     10
+outer.top =        10
+outer.right =      10
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -95,60 +96,64 @@ outer.right =      0
 # '''
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
-alt-comma = 'layout accordion horizontal vertical'
+ctrl-alt-shift-slash = 'layout tiles horizontal vertical'
+ctrl-alt-shift-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-j = 'focus left'
-alt-k = 'focus down'
-alt-i = 'focus up'
-alt-l = 'focus right'
+ctrl-alt-shift-j = 'focus left'
+ctrl-alt-shift-k = 'focus down'
+ctrl-alt-shift-i = 'focus up'
+ctrl-alt-shift-l = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-j = 'move left'
-alt-shift-k = 'move down'
-alt-shift-i = 'move up'
-alt-shift-l = 'move right'
+cmd-ctrl-alt-shift-j = 'move left'
+cmd-ctrl-alt-shift-k = 'move down'
+cmd-ctrl-alt-shift-i = 'move up'
+cmd-ctrl-alt-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-alt-shift-u = 'resize smart -50'
-alt-shift-o = 'resize smart +50'
+cmd-ctrl-alt-shift-u = 'resize smart -50'
+cmd-ctrl-alt-shift-o = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace 1' # Client workspaces 1-5
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-c = 'workspace Comm'
-alt-space = 'workspace Def'
-alt-m = 'workspace Media'
-alt-p = 'workspace Personal'
-alt-r = 'workspace Ref'
-alt-s = 'workspace Services'
-alt-t = 'workspace Tasks'
+ctrl-alt-shift-space = 'workspace Main'
+ctrl-alt-shift-c = 'workspace Comm'
+ctrl-alt-shift-d = 'workspace Desktop'
+ctrl-alt-shift-m = 'workspace Media'
+ctrl-alt-shift-p = 'workspace Personal'
+ctrl-alt-shift-q = 'workspace QuikRef'
+ctrl-alt-shift-r = 'workspace Research'
+ctrl-alt-shift-s = 'workspace Services'
+ctrl-alt-shift-t = 'workspace Tasks'
+ctrl-alt-shift-1 = 'workspace 1' # additional workspaces 1-5
+ctrl-alt-shift-2 = 'workspace 2'
+ctrl-alt-shift-3 = 'workspace 3'
+ctrl-alt-shift-4 = 'workspace 4'
+ctrl-alt-shift-5 = 'workspace 5'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-c = 'move-node-to-workspace Comm'
-alt-shift-space = 'move-node-to-workspace Def'
-alt-shift-m = 'move-node-to-workspace Media'
-alt-shift-p = 'move-node-to-workspace Personal'
-alt-shift-r = 'move-node-to-workspace Ref'
-alt-shift-s = 'move-node-to-workspace Services'
-alt-shift-t = 'move-node-to-workspace Tasks'
+cmd-ctrl-alt-shift-space = 'move-node-to-workspace Main'
+cmd-ctrl-alt-shift-c = 'move-node-to-workspace Comm'
+cmd-ctrl-alt-shift-d = 'move-node-to-workspace Desktop'
+cmd-ctrl-alt-shift-m = 'move-node-to-workspace Media'
+cmd-ctrl-alt-shift-p = 'move-node-to-workspace Personal'
+cmd-ctrl-alt-shift-q = 'move-node-to-workspace QuikRef'
+cmd-ctrl-alt-shift-r = 'move-node-to-workspace Research'
+cmd-ctrl-alt-shift-s = 'move-node-to-workspace Services'
+cmd-ctrl-alt-shift-t = 'move-node-to-workspace Tasks'
+cmd-ctrl-alt-shift-1 = 'move-node-to-workspace 1'
+cmd-ctrl-alt-shift-2 = 'move-node-to-workspace 2'
+cmd-ctrl-alt-shift-3 = 'move-node-to-workspace 3'
+cmd-ctrl-alt-shift-4 = 'move-node-to-workspace 4'
+cmd-ctrl-alt-shift-5 = 'move-node-to-workspace 5'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-alt-tab = 'workspace-back-and-forth'
+ctrl-alt-shift-tab = 'workspace-back-and-forth'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
+cmd-ctrl-alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-alt-shift-semicolon = 'mode service'
+cmd-ctrl-alt-shift-semicolon = 'mode service'
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -161,27 +166,42 @@ f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling
 # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
 #s = ['layout sticky tiling', 'mode main']
 
-alt-shift-j = ['join-with left', 'mode main']
-alt-shift-k = ['join-with down', 'mode main']
-alt-shift-i = ['join-with up', 'mode main']
-alt-shift-l = ['join-with right', 'mode main']
+cmd-ctrl-alt-shift-j = ['join-with left', 'mode main']
+cmd-ctrl-alt-shift-k = ['join-with down', 'mode main']
+cmd-ctrl-alt-shift-i = ['join-with up', 'mode main']
+cmd-ctrl-alt-shift-l = ['join-with right', 'mode main']
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'KeyMapp'
-run = 'move-node-to-workspace Ref'
+run = 'move-node-to-workspace QuikRef'
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'Slack'
 run = 'move-node-to-workspace Comm'
 
 [[on-window-detected]]
+if.app-name-regex-substring = 'Spotify'
+run = 'move-node-to-workspace Media'
+
+[[on-window-detected]]
 if.app-name-regex-substring = 'Fantastical'
 run = 'move-node-to-workspace Comm'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'Docker'
+run = 'move-node-to-workspace Services'
 
 #[[on-window-detected]]
 #if.window-title-regex-substring = 'Google Chrome - Kam (personal)'
 #run = 'move-node-to-workspace Personal'
 
 [workspace-to-monitor-force-assignment]
-Personal = ['secondary', 'KYY']
-Comm = ['KYY', 'LG']
+Main = ['Built-in Retina Display', 'main']
+Comm = ['SAMSUNG', 'KYY', 'LG', 'secondary']
+Desktop = ['Built-in Retina Display', 'main']
+Media = ['KYY', 'LG', 'secondary']
+Personal = ['SAMSUNG', 'KYY', 'LG', 'secondary']
+QuikRef = ['KYY', 'LG', 'secondary']
+Research = ['SAMSUNG', 'KYY', 'LG', 'secondary']
+Services = ['SAMSUNG', 'KYY', 'LG', 'secondary']
+Tasks = ['Built-in Retina Display', 'main']
